# network-monitor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/network_monitor/: __main__.py  app.py  main.py  state.py
src/network_monitor/core/: models.py  normalize_target.py
src/network_monitor/core/monitor/: __init__.py  models.py  state.py
src/network_monitor/monitor/: thread.py
src/network_monitor/persistence/: settings_store.py
src/network_monitor/services/monitor/: __init__.py  engine.py  probe.py  thread.py
src/network_monitor/ui/: main_window.py  monitor_view.py  settings_dialog.py
src/network_monitor/ui/assets/: resources.qrc  resources_rc.py
src/network_monitor/ui/dialogs/settings/: __init__.py  dialog.py  view.py
src/network_monitor/ui/dialogs/settings/sections/: __init__.py  target_section.py
src/network_monitor/ui/dialogs/settings/widgets/: __init__.py  seconds_group.py
src/network_monitor/ui/help/: __init__.py  tooltips.py
src/network_monitor/ui/styles/: app.qss
src/network_monitor/ui/themes/: __init__.py  base.qss  dark.qss  light.qss  manager.py
src/network_monitor/ui/views/: __init__.py  monitor_view.py
src/network_monitor/ui/widgets/: __init__.py  seconds_group.py  section_card.py
src/network_monitor/ui/workers/: __init__.py  monitor_thread.py
