[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/network-monitor"]

[project]
name = "network-monitor"
version = "0.3.0"
description = "Desktop application to monitor network connectivity."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6"
]
