[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/network_monitor"]
include = [
    "src/network_monitor/ui/styles/app.qss"
]

[project]
name = "network-monitor"
version = "0.3.5"
description = "Desktop application to monitor network connectivity."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6"
]

[project.scripts]
network-monitor = "network_monitor.app:main"
