[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/network_monitor"]
include = [
    "src/network_monitor/ui/themes/base.qss"
]

[tool.hatch.build.targets.sdist]
include = [
    "src/network_monitor",
    "src/network_monitor/ui/themes/base.qss",
    "README.md",
]

[project]
name = "network-monitor"
version = "0.8.4"
description = "Desktop application to monitor network connectivity."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6"
]

[project.scripts]
network-monitor = "network_monitor.main:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.19.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
